--- a/index.html
+++ b/index.html
@@ -6,33 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <title>Hello, world!</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">ТБО</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+<nav class="navbar navbar-expand-lg navbar-light ">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"> Главная <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Оставить заявку</a>
-        </div>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
+
+        <ul class="navbar-nav">
+            <li><a class="navbar-brand" href="#">
+                <img src="./img/logo.png" height="30" alt="">
+            </a></li>
+            <li><a class="nav-item nav-link active" href="./index.html">Главная<span class="sr-only">(current)</span></a></li>
+            <li><a class="nav-item nav-link" href="#">Оставить заявку</a></li>
+            <li><a class="nav-item nav-link" href="#">Склад</a></li>
+            <li><a class="nav-item nav-link" href="#">Торги</a></li>
+
+
+        </ul>
+
+        <ul class="navbar-nav" style="margin-right: 15%;">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="dateTimeLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dateTimeLink" id="carInfo">
+                    <a class="dropdown-item carInfo" href="#">Машина 1: СКЛАД через 15 минут</a>
+                    <a class="dropdown-item carInfo" href="#">Машина 2: ПОЛИГОН ТБО через 2 часа</a>
+                    <a class="dropdown-item carInfo" href="#"></a>
+
+                </div>
+            </li>
+
+        </ul>
     </div>
 </nav>
+<div class="content">
+    <div id="map"></div>
+</div>
 
-
-<div id="map"></div>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="script.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="./lib/jquery-3.4.1.min.js"></script>
+<script src="./lib/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
